# slam

./: .gitignore  astar.lua  buff.lua  common.lua  entity.lua  match.lua  tilemap.lua  tools.lua  unittest.lua
CentralServer/: CMakeLists.txt
GatewayServer/: CMakeLists.txt
GatewayServer/src/: CentralClient.cpp  CentralClient.h  ClientTask.cpp  ClientTask.h  ClientTaskManager.cpp  ClientTaskManager.h  GatewayPlayer.h  GatewayPlayerManager.cpp  GatewayPlayerManager.h  GatewayServer.h  SceneClient.h  SceneClientManager.h
common/: common.h
common/config/: Config.cpp  Config.h
common/csv/: CsvReader.h
common/message/: CommonMessage.h
common/protocol/: build.bat  build.sh
common/time/: Time.cpp  Time.h  Timer.cpp
common/tools/: ByteBuffer.cpp  ByteBuffer.h  Callback.h  Constructor.h  HttpParser.h  LockfreeQueue.h  Noncopyable.h  Registry.h  Spinlocker.h  Tools.cpp  Tools.h
common/xml/: XmlParser.cpp  XmlParser.h
docs/: APIs  TODO  mind.txt  客户端和服务器的通信约定
gatewayserver/: CMakeLists.txt
recordserver/: CMakeLists.txt
recordserver/conf/: conf.xml
recordserver/protocol/: build.sh  record.pb.cc  record.pb.h  record.proto
recordserver/src/: Entity.h  RecordMessage.h  main.cpp  record.h
scripts/: common.lua  god.lua  main.lua
scripts/copy/: copy.lua  event.lua  map.lua  obstacle.lua  scene.lua  scene_creator.lua
scripts/match/: bag.lua  buff.lua  card.lua  entity.lua  item.lua  match.lua  monster.lua  pack.lua
scripts/modules/: battleutil.lua  (+16 more)
shard/StorageServer/: CMakeLists.txt
shard/StorageServer/conf/: conf.xml  db.xml
shard/StorageServer/src/: CentralTask.cpp  CentralTask.h  CentralTaskManager.cpp  CentralTaskManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  MainProcess.cpp  MainProcess.h  MessageStatement.cpp  MessageStatement.h  SceneTask.cpp  SceneTask.h  SceneTaskManager.cpp  SceneTaskManager.h  StorageEntity.cpp  StorageEntity.h  StorageEntityManager.cpp  StorageEntityManager.h  StorageHandler.cpp  StorageHandler.h  StorageHandlerManager.cpp  StorageHandlerManager.h  StorageProcess.cpp  StorageProcess.h  StorageProcessManager.cpp  StorageProcessManager.h  StorageService.cpp  StorageService.h  main.cpp
shard/StorageServer/src/mysql/: MySQL.cpp  MySQL.h  MySQLResult.cpp  MySQLResult.h  MySQLStatement.cpp  MySQLStatement.h
src/: CMakeLists.txt  main.c  slam.h  slam_byte_buffer.c  slam_byte_buffer.h  slam_io_thread.c  slam_io_thread.h  slam_log.c  slam_log.h  slam_lua.c  slam_lua.h  slam_lua_db.c  slam_lua_db.h  slam_lua_event.c  slam_lua_event.h  slam_lua_func.c  slam_lua_func.h  slam_lua_value.c  slam_lua_value.h  slam_main.c  slam_main.h  slam_message.c  slam_message.h  slam_message_queue.c  slam_message_queue.h  slam_poll.c  slam_poll.h  slam_protocol.c  slam_protocol.h  slam_runnable.c  slam_runnable.h  slam_signal.c  slam_signal.h  slam_socket.c  slam_socket.h  slam_timer_list.c  slam_timer_list.h  slam_utils.c  slam_utils.h  todo.txt
src/MessageBuilder/: CMakeLists.txt  MessageBuilder.cpp  MessageBuilder.h  MessageParser.cpp  luaT_message_parser.cpp  luaT_message_parser.h  protocol.h
src/db/: slam_db.c  slam_db.h  slam_db_conf.c  slam_db_conf.h  slam_db_result.c  slam_db_result.h  slam_db_table.c  slam_db_table.h
src/io/: slam_io_thread.c  slam_io_thread.h  slam_message.c  slam_message.h  slam_message_queue.c  slam_message_queue.h  slam_poll.c  slam_poll.h  slam_socket.c  slam_socket.h  slam_spinlock.c  slam_thread_cond.c  slam_thread_cond.h
src/protocol/: CMakeLists.txt  MessageParser.h  luaT_message_parser.cpp  luaT_message_parser.h  protocol.cpp  protocol.h  rawmessage.h
src/protos/: common.proto
src/scripts/: client.lua  server.lua  test.lua  tools.lua
src/thread/: slam_atomic.h  slam_spinlock.h  slam_thread.c  slam_thread.h  slam_thread_cond.c  slam_thread_cond.h  slam_thread_pool.c  slam_thread_pool.h
tests/: CMakeLists.txt
tests/easydb/: CMakeLists.txt  test_easydb.cpp  test_easydb.h
tests/easylog/: CMakeLists.txt  test_easylog.cpp  test_easylog.h
tests/easynet/: CMakeLists.txt  test_easynet.cpp
tests/luaT/: CMakeLists.txt  test_luaT.cpp  test_luaT.h
tnode/: CMakeLists.txt
tnode/conf/: conf.xml
tnode/protocol/: echo.proto
tnode/scripts/: benchmark.lua  init.lua  performance.lua  register.lua  server.lua  test.lua  test_db.lua
tnode/scripts/benchmark/: main.lua  test_service.lua
tnode/scripts/client/: client.lua  client2.lua  main.lua  main2.lua
tnode/scripts/io/centralserver/: create_player.lua  login_player.lua  main.lua  match.lua  scene.lua
tnode/scripts/io/client/: main.lua  robot.lua
tnode/scripts/io/protocol/: protocol.lua  protocol.proto
tnode/scripts/mmog/protocol/: protocol.lua  protocol.proto
tnode/scripts/mmog/server/: login_player.lua  main.lua
tnode/scripts/server/: main.lua  server.lua
tnode/scripts/tests/: db.lua  db_main.lua  main.lua  newservice.lua  test.lua  timer.lua
tnode/src/: tnode.h
tnode/src/config/: Config.cpp  Config.h
tnode/src/csv/: CsvParser.h  CsvReader.h
tnode/src/db/: Database.cpp  Database.h  DatabaseManager.cpp  DatabaseManager.h  Easydb.cpp  Easydb.h  EasydbInternal.cpp  EasydbInternal.h  EasydbParser.cpp  EasydbParser.h  ObjectManager.cpp  ObjectManager.h  Record.cpp  Record.h  Table.cpp  Table.h  TableManager.cpp  TableManager.h
tnode/src/db/mysql/: MySQL.cpp  MySQL.h  MySQLResult.cpp  MySQLResult.h  MySQLStatement.cpp  MySQLStatement.h
tnode/src/lua/: MessageParser.cpp  luaT.cpp  luaT.h  luaT_entry.cpp  luaT_entry.h  luaT_message_parser.cpp  luaT_message_parser.h  luaT_reg_functions.cpp  luaT_xml_parser.cpp
tnode/src/message/: MessageParser.cpp  MessageParser.h
tnode/src/mysql/: .MySQL.cpp.swp  MySQL.cpp  MySQLStatement.cpp
tnode/src/net/: NetworkManager.cpp  NetworkManager.h
tnode/src/service/: Service.cpp  Service.h  ServiceManager.cpp  ServiceManager.h  main.cpp
tnode/src/time/: Time.cpp  Time.h  TimerManager.cpp  TimerManager.h
tnode/src/tools/: ByteBuffer.cpp  LockfreeMap.h  LockfreeQueue.h  Manager.h  Registry.cpp  Runnable.h  ThreadPool.h  Tools.cpp
tnode/src/xml/: XmlParser.cpp  XmlParser.h
(+407 files in other folders)
