cmake_minimum_required (VERSION 2.8)

set(EASYLOG_DIR ${PROJECT_SOURCE_DIR}/deps/easylog)
#set(DEPS_DIR ${PROJECT_SOURCE_DIR}/deps)
#set(BUNDLE_DIR ${DEPS_DIR}/bundle-0.01)
#set(PROTOBUF_DIR ${DEPS_DIR}/protobuf-3.6.1)
#set(TCMALLOC_DIR ${DEPS_DIR}/gperftools-2.7)
#set(RAPIDXML_DIR ${DEPS_DIR}/rapidxml-1.13)
#set(RAPIDJSON_DIR ${DEPS_DIR}/rapidjson-1.1.0)
#set(MYSQL_DIR ${DEPS_DIR}/mysql-5.6.37)
#set(LIBEVENT_DIR ${DEPS_DIR}/libevent-2.1.8)
#set(LIBUV_DIR ${DEPS_DIR}/libuv-1.23.2)
#set(LIBZMQ_DIR ${DEPS_DIR}/libzmq-4.3.0)

ADD_SUBDIRECTORY(easylog)
